<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobile SGMC</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Logina</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_equipa_cirurgica">Equipa Cirurgica</string>
    <string name="btn_WebService">WebService</string>
    <string name="search">Procurar</string>
    <string name="save_Equipa">Guardar Equipa Cirurgica</string>
    <string name="add_Profissional">Adicionar Profissional</string>
    <string name="save_DadosCirurgia">Guardar Dados Cirurgia</string>
    <string name="save_Lista">Guardar Lista</string>
    <string name="save_Intra">Salvar Dados</string>
    <string name="add_Produto">Adicionar Produto</string>
    <string name="search_Lista">Procurar Lista Material de Cirurgia</string>
    <string name="add_Aparelho">Adicionar Aparelho</string>
    <string name="add_Instrumento">Adicionar Instrumento</string>
    <string name="save_Aparelho">Guardar Aparelho Utilizado</string>
    <string name="save_Instrumento">Guardar Instrumento Utilizado</string>
    <string name="add_Material">Adicionar Material</string>
    <string name="save_Material">Guardar Material Utilizado</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="logout">Logout</string>
    <string name="speech_prompt">Say something…</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="text_equipa_cirurgia">Equipa Cirurgia</string>
    <string name="introduza_o_nome_do_novo_profissional_">Introduza o nome do novo profissional...</string>
    <string name="texto_cirurgiao">Cirurgião:</string>
    <string name="_1_ajudante_">1ºAjudante:</string>
    <string name="_2_ajudante_">2ºAjudante:</string>
    <string name="_3_ajudante_">3ºAjudante:</string>
    <string name="_Anestesista_">Anestesista:</string>
    <string name="_Enfermeiro_Instrumentista_">Enfermeiro Instrumentista:</string>
    <string name="_Enfermeiro_Circulante_">Enfermeiro Circulante:</string>
    <string name="_Enfermeiro_Anestesia_">Enfermeiro de Anestesia:</string>
    <string name="_Assistente_Operacional_">Assistente Operacional:</string>
    <string name="title_activity_utentes">UtentesActivity</string>
    <string name="_Nome_">Nome:</string>
    <string name="_NumProc_">Número Processo:</string>
    <string name="_dataNascimento_">Data Nascimento:</string>
    <string name="_subsistema_">Subsistema:</string>
    <string name="_alergias_">Alergias:</string>
    <string name="_patologias_">Patologias:</string>
    <string name="_antecedentesCirurgicos_">Antecendentes Cirurgicos:</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="username_">Username ...</string>
    <string name="password_">Password ...</string>
    <string name="login">Log In</string>
    <string name="utentes">Utentes</string>
    <string name="equipa_cirurgica">Equipa Cirurgica</string>
    <string name="sair">Sair</string>
    <string name="_Especialidade_Cirurgica_">Especialidade Cirúrgica:</string>
    <string name="_Cirurgia_">Cirurgia:</string>
    <string name="_Data_">Data:</string>
    <string name="_TipoCirurgia_"></string>
    <string name="_TipoCirurgia1_">Tipo Cirurgia:</string>
    <string name="_Sala_">Sala:</string>
    <string name="_Lateralidade_">Lateralidade:</string>
    <string name="_ClassifASA_">Classificação ASA</string>
    <string name="menu">MENU</string>
    <string name="title_activity_dados_intra_operatorio">DadosINtraOperatorioActivity</string>
    <string name="title_activity_aparelhos">AparelhosActivity</string>
    <string name="title_activity_instrumental">InstrumentalActivity</string>
    <string name="title_activity_material">MaterialActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="color">Color</string>
    <string name="escolhaUmaPosicao">Escolha uma posição:</string>
    <string name="erro_guardarIntra">Erro Guardar Intra Operatório - Verifique a Internet e repita o Processo</string>
    <string name="sucesso_saveIntra">Dados Intra Operatórios Salvos Com Sucesso</string>
    <string name="save_DadosIntra">A guardar Dados Intra Operatórios...</string>
    <string name="aguarde">"Aguarde ... "</string>
    <string name="guardar_dados">A guardar Dados...</string>
    <string-array name="spinnerInicio">
        <item/>
    </string-array>
    <string-array name="menuDrawer">
        <item>Equipa Cirurgica</item>
        <item>Utentes</item>
    </string-array>
    <string-array name="lateralidadeArray">
        <item/>
        <item>Direita</item>
        <item>Esquerda</item>
        <item>Bi Lateral</item>
        <item>Não Aplicável</item>
    </string-array>
    <string-array name="arrayTipoAnestesia">
        <item/>
        <item>Anestesia geral</item>
        <item>Anestesia peridural</item>
        <item>Anestesia raquidiana</item>
        <item>Anestesia local</item>
    </string-array>
    <string-array name="arrayPlacaEletrodoNeutro">
        <item/>
        <item>Sim</item>
        <item>Nao</item>
    </string-array>
    <string-array name="arrayCateterismovisical">
        <item/>
        <item>Malecot</item>
        <item>Moss</item>
        <item>Nasoentérica</item>
        <item>Nasogástrica</item>
        <item>Nelaton</item>
        <item>Retal</item>
        <item>Sengstaken - blakemore</item>
        <item>Traqueal comum</item>
    </string-array>
    <string-array name="arrayNasogastrica">
        <item/>
        <item>Malecot</item>
        <item>Moss</item>
        <item>Nasoentérica</item>
        <item>Nasogástrica</item>
        <item>Nelaton</item>
        <item>Retal</item>
        <item>Sengstaken - blakemore</item>
        <item>Traqueal comum</item>
    </string-array>
    <string-array name="arrayPosicaoOperatoria">
        <item/>
        <item>Decúbito dorsal ou supina</item>
        <item>Decúbito ventral ou prona</item>
        <item>Decúbito lateral ou sims</item>
        <item>Posição de litotômia ou ginecológica</item>
        <item>Posição trendelenburg</item>
        <item>Posição trendelenburg reverso</item>
        <item>Posição fowler ou sentada</item>
        <item>Posição de canivete </item>
    </string-array>
    <string-array name="arrayLocalizacao">
        <item/>
        <item>Ante-Braco</item>
        <item>Braco</item>
        <item>Peito</item>
        <item>Mao</item>
        <item>Perna</item>
        <item>Coxa</item>
    </string-array>
    <string-array name="arrayAdminSangue">
        <item/>
        <item>Sangue</item>
        <item>Plasma</item>
        <item>Plaquetas</item>
        <item>Hemácias</item>
        <item>Granulócitos</item>
        <item>Crioprecipitado</item>
    </string-array>
    <string-array name="arrayCaracteristicasDrenagem">
        <item/>
        <item>Desobstrução dos gânglios</item>
        <item>Desobstrução dos vasos</item>
    </string-array>
    <string-array name="arrayClassificacaoASA">
        <item/>
        <item>ASA I</item>
        <item>ASA II</item>
        <item>ASA III</item>
        <item>ASA IV</item>
        <item>ASA V</item>
        <item>ASA VI</item>
    </string-array>
    <string-array name="arrayDestino">
        <item/>
        <item>Alta</item>
        <item>Internamento</item>
        <item>Não Aplicável</item>
    </string-array>

    <string-array name="arrayLocalizacaoMantaTermica">
        <item/>
        <item>Região Anterior</item>
        <item>Região Posterior</item>
        <item>Tórax e Membros Superior</item>
        <item>Região Pélvica e Membros Inferiores</item>
    </string-array>


    <string-array name="arrayLocalizacaoGarrote">
        <item/>
        <item>Escolha da Imagem</item>
        <item>Membro Superior Direito</item>
        <item>Membro Superior Esquerdo</item>
        <item>Membro Inferior Direito</item>
        <item>Membro Inferior Esquerdo</item>
    </string-array>


    <string-array name="arrayPlacaElectrodo">
        <item/>
        <item>Escolha da Imagem</item>
        <item>Membro Superior Direito</item>
        <item>Membro Superior Esquerdo</item>
        <item>Membro Inferior Direito</item>
        <item>Membro Inferior Esquerdo</item>
    </string-array>


    <string-array name="arrayLocalizacaoAlivioZonasPressao">
        <item/>
        <item>Região Occipital</item>
        <item>Omoplatas</item>
        <item>Olecraneos</item>
        <item>Cristas Ilíacas</item>
        <item>Regiões Rotulianas</item>
        <item>Regiões Trocantericas</item>
        <item>Regiões Maleolares</item>
        <item>Calcaneos</item>
    </string-array>


    <string-array name="arrayLocalizacaoAcessoVenoso">
        <item/>
        <item>Jugular Direita</item>
        <item>Femural Direita</item>
    </string-array>
</resources>