<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#EEEEEE">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#FFFFFF">
                <TextView
                    android:id="@+id/textview_NomeEquipa"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="25dip"
                    android:text="Nome Equipa: "
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/edit_text_NomeEquipa"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textview_NomeEquipa"
                    android:layout_marginLeft="10dip"
                    android:layout_toRightOf="@+id/textview_NomeEquipa" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#FFFFFF"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:id="@+id/textView_Medicos"
                    android:textStyle="bold|italic"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:text="Médicos" />
                <TextView
                    android:id="@+id/textCirurgiao"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textview_NomeEquipa"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="15dp"
                    android:text="@string/texto_cirurgiao"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/spinner_Cirurgião"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textCirurgiao"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="10dip"
                    android:layout_toRightOf="@+id/textCirurgiao" />


                <TextView
                    android:id="@+id/textView_1Ajudante"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spinner_Cirurgião"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="20dip"
                    android:text="@string/_1_ajudante_"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/spinner_1Ajudante"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textView_1Ajudante"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="10dip"
                    android:layout_toRightOf="@+id/textView_1Ajudante"
                    android:entries="@array/spinnerInicio" />



                <TextView
                    android:id="@+id/textView_2Ajudante"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView_1Ajudante"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="20dip"
                    android:text="@string/_2_ajudante_"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/spinner_2Ajudante"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textView_2Ajudante"
                    android:layout_marginTop="10dip"
                    android:layout_marginLeft="10dip"
                    android:layout_toRightOf="@+id/textView_2Ajudante"
                    android:entries="@array/spinnerInicio" />

                <TextView
                    android:id="@+id/textView_3Ajudante"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView_2Ajudante"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="20dip"
                    android:text="@string/_3_ajudante_"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/spinner_3Ajudante"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textView_3Ajudante"
                    android:layout_marginTop="10dip"
                    android:layout_marginLeft="10dip"
                    android:layout_toRightOf="@+id/textView_3Ajudante"
                    android:entries="@array/spinnerInicio" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#FFFFFF"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:id="@+id/textView_Enfermeiros"
                    android:textStyle="bold|italic"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:text="Enfermeiros" />
                <TextView
                    android:id="@+id/textView_Anestesista"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView_3Ajudante"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="20dip"
                    android:text="@string/_Anestesista_"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/spinner_Anestesista"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textView_Anestesista"
                    android:layout_marginTop="10dip"
                    android:layout_marginLeft="10dip"
                    android:layout_toRightOf="@+id/textView_Anestesista"
                    android:entries="@array/spinnerInicio" />

                <TextView
                    android:id="@+id/textView_Enf_Instrumentista"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView_Anestesista"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="20dip"
                    android:text="@string/_Enfermeiro_Instrumentista_"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/spinner_Enf_Instrumentista"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textView_Enf_Instrumentista"
                    android:layout_marginTop="10dip"
                    android:layout_marginLeft="10dip"
                    android:layout_toRightOf="@+id/textView_Enf_Instrumentista"
                    android:entries="@array/spinnerInicio" />

                <TextView
                    android:id="@+id/textView_Enf_Circulante"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView_Enf_Instrumentista"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="20dip"
                    android:text="@string/_Enfermeiro_Circulante_"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/spinner_Enf_Circulante"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textView_Enf_Circulante"
                    android:layout_marginTop="10dip"
                    android:layout_marginLeft="10dip"
                    android:layout_toRightOf="@+id/textView_Enf_Circulante"
                    android:entries="@array/spinnerInicio" />

                <TextView
                    android:id="@+id/textView_Enf_de_Anestesia"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView_Enf_Circulante"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="20dip"
                    android:text="@string/_Enfermeiro_Anestesia_"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/spinner_Enf_de_Anestesia"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textView_Enf_de_Anestesia"
                    android:layout_marginTop="10dip"
                    android:layout_marginLeft="10dip"
                    android:layout_toRightOf="@+id/textView_Enf_de_Anestesia"
                    android:entries="@array/spinnerInicio" />

                <TextView
                    android:id="@+id/textView_Assistente_Operacional"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView_Enf_de_Anestesia"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="20dip"
                    android:text="@string/_Assistente_Operacional_"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/spinner_Assistente_Operacional"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textView_Assistente_Operacional"
                    android:layout_marginTop="10dip"
                    android:layout_marginLeft="10dip"
                    android:layout_toRightOf="@+id/textView_Assistente_Operacional"
                    android:entries="@array/spinnerInicio" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>